# TestHighLevelVulkanRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Capoeira.fbx  Franck.fbx  README.md  liens.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/core/: CMakeLists.txt
src/engine/core/private/engine/logger/: Logger.cpp
src/engine/core/private/engine/logger/sinks/: StdoutSink.cpp
src/engine/core/private/engine/module/: ModuleManager.cpp
src/engine/core/public/engine/: Core.hpp  Flags.hpp  Hash.hpp  MulticastDelegate.hpp  PlatformMacros.hpp  Result.hpp  UnusedParameters.hpp
src/engine/core/public/engine/containers/: SparseArray.hpp
src/engine/core/public/engine/debug/: Assertions.hpp
src/engine/core/public/engine/logger/: Logger.hpp  Sink.hpp
src/engine/core/public/engine/logger/sinks/: StdoutSink.hpp
src/engine/core/public/engine/module/: Module.hpp  ModuleManager.hpp
src/engine/core/public/engine/util/: SimplePool.hpp
src/engine/gfx/: CMakeLists.txt
src/engine/gfx/private/engine/gfx/: Device.cpp  ThreadedCommandPool.cpp  Window.cpp
src/engine/gfx/public/engine/gfx/: Backend.hpp  BackendDevice.hpp  Buffer.hpp  Command.hpp  Device.hpp  DeviceResource.hpp  Format.hpp  GfxPipeline.hpp  Memory.hpp  Pipeline.hpp  PipelineLayout.hpp  Rect.hpp  RenderPass.hpp  Result.hpp  Sampler.hpp  Shader.hpp  ShaderFormat.hpp  SwapChain.hpp  Sync.hpp  Texture.hpp  Window.hpp
src/engine/imgui/: CMakeLists.txt
src/engine/imgui/private/engine/imgui/: ImGui.cpp
src/engine/imgui/public/engine/imgui/: ImGui.hpp
src/engine/vulkangfx/: CMakeLists.txt
src/engine/vulkangfx/private/engine/gfx/: Vulkan.hpp  VulkanBackend.cpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandList.hpp  VulkanCommandPool.hpp  VulkanDescriptorSet.cpp  VulkanDescriptorSet.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipeline.hpp  VulkanPipelineLayout.cpp  VulkanPipelineLayout.hpp  VulkanRenderPass.hpp  VulkanSampler.hpp  VulkanShader.hpp  VulkanSwapChain.hpp  VulkanSwapchain.cpp  VulkanSync.hpp  VulkanTexture.hpp  VulkanTextureView.hpp
src/engine/vulkangfx/public/engine/gfx/: VulkanBackend.hpp
src/game/main/: CMakeLists.txt  Main.cpp
